packages/typ/tests/fixtures/diagnostics/0240_adt_nested_annotation_mismatch_10.ml.expected
File "0240_adt_nested_annotation_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0240_adt_nested_annotation_mismatch_10 is not a valid module name.

File "0240_adt_nested_annotation_mismatch_10.ml", line 2, characters 29-33:
2 | let _ : rec_kappa = { key = (true, 9); ok = false }
                                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
