packages/typ/tests/fixtures/diagnostics/0240_adt_nested_annotation_mismatch_10.ml
type rec_kappa = { key : int * bool; ok : bool }
let _ : rec_kappa = { key = (true, 9); ok = false }
